crates/dbdict/tests/snapshots/validate_spec__s05_conflicts_not_on_both_sides.snap
---
source: crates/dbdict/tests/validate_spec.rs
---
# expected: S05
# `conflicts: [amount]` claims `amount` appears in both `food` and
# `food_nutrient`, but `food` has no `amount` column.

$version: "0.1.0"

tables:
  - name: food
    columns:
      - name: id
        type: number(id)
        constraints: [primary_key]
        examples: [1, 2]

  - name: food_nutrient
    columns:
      - name: id
        type: number(id)
        constraints: [primary_key]
        examples: [1, 2]
      - name: food_id
        type: number(id)
        constraints: [foreign_key]
        examples: [1, 2]
      - name: amount
        type: number(quantity)
        range: [0, 100]

relationships:
  - join: food.id = food_nutrient.food_id
    cardinality: one-to-many
    conflicts: [amount]
────────────────────────────────────────
error: [S05] A `conflicts` entry must name a column on both sides of the join.
  --> spec/s05-conflicts-not-on-both-sides.yaml:32:17
   |
30 |   - join: food.id = food_nutrient.food_id
31 |     cardinality: one-to-many
32 |     conflicts: [amount]
   |                 ^^^^^^ `amount` is not a column of `food`
