crates/dbdict/tests/snapshots/validate_spec__s07_range_type_missing_range.snap
---
source: crates/dbdict/tests/validate_spec.rs
assertion_line: 414
---
$version: "0.1.0"
$learn_more: https://github.com/pjc-crates/dbdict
tables:
  - name: table
    columns:
      - name: weight
        type: number(quantity)
      - name: recorded_at
        type: date
────────────────────────────────────────
error: [S07] A `number(quantity)` column must describe its bounds with `range`.
 --> dict.yaml:7:15
  |
4 |   - name: table
5 |     columns:
6 |       - name: weight
7 |         type: number(quantity)
  |               ^^^^^^^^^^^^^^^^ has type `number(quantity)` but is missing `range`
error: [S07] A `date` column must describe its bounds with `range`.
 --> dict.yaml:9:15
  |
4 |   - name: table
...
8 |       - name: recorded_at
9 |         type: date
  |               ^^^^ has type `date` but is missing `range`
