crates/dbdict/tests/snapshots/validate_spec__s13_descending_range.snap
---
source: crates/dbdict/tests/validate_spec.rs
---
$version: "0.1.0"
$learn_more: http://data-dict.tidyverse.org/
tables:
  - name: table
    columns:
      - name: mass
        type: number(quantity)
        units: kg
        range: [100, 10]
────────────────────────────────────────
error: [S13] A range's minimum must be less than or equal to its maximum.
 --> dict.yaml:9:17
  |
4 |   - name: table
5 |     columns:
6 |       - name: mass
...
9 |         range: [100, 10]
  |                 ^^^ is greater than the maximum
